--- a/res-front/src/app/contacts/contacts.component.html
+++ b/res-front/src/app/contacts/contacts.component.html
@@ -37,35 +37,35 @@
     <ul>
       <li>
         <i class="fa-solid fa-location-dot"></i>
-        <span>44 Elmessaha Street,  Dokki, Giza</span>
+        <span>Cairo, Egypt</span>
       </li>
       <li>
         <i class="fa-brands fa-whatsapp"></i>
-        <a href="">+1 (12) 123456789</a>
+        <a href="https://wa.me/201098442236" target=”_blank”>+20 1098442236</a>
       </li>
       <li>
         <i class="fa-solid fa-phone"></i>
-        <span>+1 (291) 123456789</span>
+        <span>+20 1098442236</span>
       </li>
       <li>
         <i class="fa-solid fa-phone"></i>
-        <span>+1 (291) 123456789</span>
+        <span>+20 1119482144</span>
       </li>
       <li>
         <i class="fa-solid fa-phone"></i>
-        <span>+1 (291) 123456789</span>
+        <span>+20 1128330707</span>
       </li>
       <li>
         <i class="fa-solid fa-phone"></i>
-        <span>+1 (291) 123456789</span>
+        <span>+20 1141366133</span>
       </li>
       <li>
         <i class="fa-solid fa-envelope"></i>
-        <a href="">info@res-eg.com</a>
+        <a href="mailto:info@res-eg.com">info@res-eg.com</a>
       </li>
       <li>
         <i class="fa-brands fa-facebook"></i>
-        <a href="">facebook.com/res-eg</a>
+        <a href="https://www.facebook.com/power.res.eg" target=”_blank”>facebook.com/power.res.eg</a>
       </li>
     </ul>
 </section>
