--- a/res-front/src/app/footer/footer.component.html
+++ b/res-front/src/app/footer/footer.component.html
@@ -2,12 +2,12 @@
 <footer>
     
    <div class="contact">
-    <span><i class="fa-solid fa-phone"></i> <strong>+20 123456789 / +20 123456789 / +20 123456789 / +20 123456789</strong> </span>
+    <span><i class="fa-solid fa-phone"></i> <strong>+20 1098442236 / +20 1119482144 / +20 1128330707 / +20 1141366133</strong> </span>
     <span><i class="fa-solid fa-envelope"></i> <strong>Info@res-eg.com</strong> </span>
     <span>
-        <i class="fa-brands fa-linkedin"></i>
-        <i class="fa-brands fa-facebook"></i>
-        <i class="fa-brands fa-youtube"></i>
+        <a ><i class="fa-brands fa-linkedin"></i></a>
+        <a href="https://www.facebook.com/power.res.eg" target=”_blank”><i class="fa-brands fa-facebook"></i></a>
+        <a href="https://www.youtube.com/@res-eg" target=”_blank”><i class="fa-brands fa-youtube"></i></a>
     </span>
    </div>
 
