--- a/res-front/src/app/home/prefooter/prefooter.component.html
+++ b/res-front/src/app/home/prefooter/prefooter.component.html
@@ -7,6 +7,6 @@
 
     </section>
 
-    <i class="fa-solid fa-arrow-right-long" data-aos="fade-right" data-aos-delay="500"></i>
+    <i routerLink="/solutions" class="fa-solid fa-arrow-right-long" data-aos="fade-right" data-aos-delay="500"></i>
 
 </section>
