--- a/res-front/src/app/nav/nav.component.css
+++ b/res-front/src/app/nav/nav.component.css
@@ -19,6 +19,10 @@
     text-align:start;
     padding-left: 1vw;
 }
+.upperNav div:first-child a{
+    text-decoration: none;
+    color: white;
+}
 
 .upperNav div:last-child{
     width: 30%;
@@ -33,6 +37,7 @@
     margin-right: 1rem;
     font-size: 1.8rem;
     cursor: pointer;
+    color: white;
 }
 .upperNav div:last-child i:hover{
     color: var(--yellow);
