--- a/res-front/src/app/nav/nav.component.html
+++ b/res-front/src/app/nav/nav.component.html
@@ -1,14 +1,14 @@
 <nav class="upperNav">
 
     <div>
-        <i class="fa-solid fa-phone"></i><span> +20 123456789</span>
-        <i class="fa-solid fa-envelope"></i><a>info@res-eg.com</a>
+        <i class="fa-solid fa-phone"></i><span> +20 1098442236</span>
+        <i class="fa-solid fa-envelope"></i><a href="mailto:info@res-eg.com">info@res-eg.com</a>
     </div>
 
     <div>
-        <i class="fa-brands fa-linkedin"></i>
-        <i class="fa-brands fa-facebook"></i>
-        <i class="fa-brands fa-youtube"></i>
+        <a href="/" ><i class="fa-brands fa-linkedin"></i></a>
+        <a href="https://www.facebook.com/power.res.eg" target=”_blank”><i class="fa-brands fa-facebook"></i></a>
+        <a href="https://www.youtube.com/@res-eg" target=”_blank”><i class="fa-brands fa-youtube"></i></a>
     </div>
 
 
