--- a/res-front/src/app/nav/nav.component.html
+++ b/res-front/src/app/nav/nav.component.html
@@ -16,7 +16,7 @@
 
 <nav class="lowerNav">
 
-    <img src="assets/res-logo.png" alt="">
+    <img routerLink="/"  src="assets/res-logo.png" alt="">
 
     <ul>
         <a  routerLink="/home" routerLinkActive="activeLink">Home</a>
