--- a/res-front/src/app/solutions/solutions.component.html
+++ b/res-front/src/app/solutions/solutions.component.html
@@ -36,7 +36,7 @@
         <app-preloading *ngIf="preload"></app-preloading>
 
         <div class="product" *ngFor = "let product of products; index as i">
-            <img [src]="'assets/products_images/' + product.image" alt="">
+            <img routerLink="/product" [queryParams]="{id:product.id}" [src]="'assets/products_images/' + product.image" alt="">
             <a routerLink="/product" [queryParams]="{id:product.id}" >{{product.short_description}}</a>
         </div>
 
